--- a/WinFormsDemo/WinFormsDemo.csproj
+++ b/WinFormsDemo/WinFormsDemo.csproj
@@ -116,7 +116,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>REM Change the filenames here when the assembly name changes
-copy $(TargetFileName) $(TargetName).scr
+copy "$(TargetFileName)" "$(TargetName).scr"
 REM Unable to properly use fody cleanup funtionality, so do this....
 DEL *.dll *.xml</PostBuildEvent>
   </PropertyGroup>
